--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "@simplewebauthn/server": "^11.0.0",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.4.0",
         "cookie-parser": "^1.4.6",
@@ -27,7 +26,6 @@
         "nodemon": "^3.1.4",
         "otplib": "^12.0.1",
         "qrcode": "^1.5.4",
-        "socket.io": "^4.7.5",
-        "web-push": "^3.6.7"
+        "socket.io": "^4.7.5"
     }
 }
