--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "description": "",
     "dependencies": {
         "@arcjet/node": "^1.0.0-alpha.34",
+        "@socket.io/admin-ui": "^0.5.1",
         "bcrypt": "^5.1.1",
         "cloudinary": "^2.4.0",
         "cookie-parser": "^1.4.6",
