--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
     "version": "1.0.0",
     "main": "app.js",
     "scripts": {
-        "app": "nodemon app.js",
-        "js": "nodemon js.js"
+        "app": "nodemon app.js"
     },
     "keywords": [],
     "author": "Asif ",
     "license": "ISC",
     "description": "",
     "dependencies": {
-        "@arcjet/node": "^1.0.0-alpha.34",
+        "@arcjet/node": "^1.0.0-beta.2",
         "@socket.io/admin-ui": "^0.5.1",
         "bcrypt": "^5.1.1",
-        "cloudinary": "^2.4.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "ejs": "^3.1.10",
         "express": "^4.19.2",
+        "imagekit": "^6.0.0",
+        "ioredis": "^5.5.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.0",
         "multer": "^1.4.5-lts.1",
