--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "nodemon": "^3.1.4",
         "otplib": "^12.0.1",
         "qrcode": "^1.5.4",
-        "socket.io": "^4.7.5"
+        "socket.io": "^4.7.5",
+        "web-push": "^3.6.7"
     }
 }
