--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@arcjet/node": "^1.0.0-beta.2",
         "@socket.io/admin-ui": "^0.5.1",
+        "axios": "^1.9.0",
         "bcrypt": "^5.1.1",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
